Set device=all permission in order to support joysticks
Fixes #2

--- a/org.supertuxproject.SuperTux.json
+++ b/org.supertuxproject.SuperTux.json
@@ -14,7 +14,7 @@
 		"--share=ipc",
 		"--socket=pulseaudio",
 		"--share=network",
-		"--device=dri"
+		"--device=all"
 	],
 	"cleanup": [
 		"/include",
