--- a/org.supertuxproject.SuperTux.json
+++ b/org.supertuxproject.SuperTux.json
@@ -75,7 +75,7 @@
 				{
 					"type": "shell",
 					"commands": [
-						"install -Dm644 data/images/engine/icons/supertux.png /app/share/icons/hicolor/48x48/apps",
+						"install -Dm644 data/images/engine/icons/supertux.png /app/share/icons/hicolor/48x48/apps/supertux.png",
 						"install -Dm644 supertux-64x64.png /app/share/icons/hicolor/64x64/apps/supertux.png",
 						"install -Dm644 supertux-128x128.png /app/share/icons/hicolor/128x128/apps/supertux.png",
 						"install -Dm644 data/images/engine/icons/supertux-256x256.png /app/share/icons/hicolor/256x256/apps/supertux.png"
