Switched build process over to org.supertuxproject.SuperTux.json

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,8 +33,8 @@ build:flatpak:
     - apt-get -qq -y install flatpak flatpak-builder
     - flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
     - flatpak install -y flathub org.freedesktop.Platform org.freedesktop.Sdk
-    - flatpak-builder --repo=build-flatpak-repo/ build-flatpak/ org.supertux.SuperTux.json
-    - flatpak build-bundle build-flatpak-repo/ supertux.flatpak org.supertux.SuperTux
+    - flatpak-builder --repo=build-flatpak-repo/ build-flatpak/ org.supertuxproject.SuperTux.json
+    - flatpak build-bundle build-flatpak-repo/ supertux.flatpak org.supertuxproject.SuperTux
   artifacts:
     paths:
       - supertux.flatpak
