Added new appdata

--- a/org.supertuxproject.SuperTux.json
+++ b/org.supertuxproject.SuperTux.json
@@ -52,6 +52,10 @@
 				},
 				{
 					"type": "file",
+					"path": "supertux2.appdata.xml"
+				},
+				{
+					"type": "file",
 					"path": "supertux-64x64.png"
 				},
 				{
