--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,7 @@ build:flatpak:
     - apt-get -qq update
     - apt-get -qq -y install flatpak flatpak-builder
     - flatpak remote-add --if-not-exists flathub https://flathub.org/repo/flathub.flatpakrepo
-    - flatpak install -y flathub org.freedesktop.Platform org.freedesktop.Sdk
+    - flatpak install -y flathub org.freedesktop.Platform//1.6 org.freedesktop.Sdk//1.6
     - flatpak-builder --repo=supertux-repo/ supertux-build/ org.supertuxproject.SuperTux.json
     - flatpak build-bundle supertux-repo/ supertux.flatpak org.supertuxproject.SuperTux
   artifacts:
