--- a/org.supertuxproject.SuperTux.json
+++ b/org.supertuxproject.SuperTux.json
@@ -106,6 +106,10 @@
                 {
                     "type": "patch",
                     "path": "supertux-build-fixes.patch"
+                },
+                {
+                    "type": "patch",
+                    "path": "supertux-appdata.patch"
                 }
             ]
         }
